# code_analysis_pp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Outline.md  README.md  arrayIndexOutOfBounds.cpp  clang-tidy_modernize.cpp  comparisons.cpp  compiler_checks.cpp  dfa_basics.cpp  dfa_samples.cpp  lifetime_safety_samples.cpp  main.cpp  misra_checks.cpp  naming_rules.cpp
Qt_sample/: CMakeLists.txt  Confirmation.h  main.cpp
